force-app/main/default/objects/User/fields/First_Logon__c.field-meta.xml
<CustomField>
    <fullName>First_Logon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Logon</label>
    <type>Checkbox</type>
</CustomField>