force-app/main/default/objects/User/fields/IsCommunityUserRegistered__c.field-meta.xml
<CustomField>
    <fullName>IsCommunityUserRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommunityUserRegistered</label>
    <type>Checkbox</type>
</CustomField>