force-app/main/default/objects/User/fields/isPasswordLocked__c.field-meta.xml
<CustomField>
    <fullName>isPasswordLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPasswordLocked</label>
    <type>Checkbox</type>
</CustomField>