force-app/main/default/objects/User/fields/RITM_New_User_Create_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>RITM_New_User_Create_Request_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RITM - New User Create Request Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>