force-app/main/default/objects/User/fields/RITM_User_Update_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>RITM_User_Update_Request_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Append the RITM - New User Create Request Details field value in this field to</inlineHelpText>
    <label>RITM - User Update Request Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>