force-app/main/default/objects/User/fields/Suppress_Physician_Outreach_Email__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Physician_Outreach_Email__c</fullName>
    <description>This will change the email body for physician outreach</description>
    <formula>Contact.Suppress_Physician_Outreach_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suppress Physician Outreach Email</label>
    <type>Checkbox</type>
</CustomField>