force-app/main/default/objects/User/fields/Survey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Completion Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>