force-app/main/default/objects/User/fields/Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>Survey_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>