force-app/main/default/objects/User/fields/Time_To_Send_Mail__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Send_Mail__c</fullName>
    <label>Time To Send Mail</label>
    <type>DateTime</type>
</CustomField>