force-app/main/default/objects/User/fields/TimeOfRun__c.field-meta.xml
<CustomField>
    <fullName>TimeOfRun__c</fullName>
    <label>TimeOfRun</label>
    <length>18</length>
    <type>Text</type>
</CustomField>